--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=your_mongodb_atlas_connection_string
-CLIENT_ORIGIN=http://localhost:5173
+MONGO_URI=mongodb+srv://leaderboardUser:<db_password>@cluster0.jzpik6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CLIENT_ORIGIN=https://3w-leaderboard-smith.netlify.app/
