--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://leaderboardUser:<db_password>@cluster0.jzpik6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://leaderboardUser:StrongPassword123@cluster0.jzpik6d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 CLIENT_ORIGIN=https://3w-leaderboard-smith.netlify.app/
